增加登录时获取储存access_key，获取推荐视频时添加access_key参数，优化推荐视频布局

--- a/app/src/main/res/drawable/selector_share.xml
+++ b/app/src/main/res/drawable/selector_share.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/shareBGs">
-    <item android:drawable="@color/shareBG"/>
+    android:color="@color/gray_bb">
+    <item android:drawable="@color/gray_da"/>
 </ripple>
