--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -24,7 +24,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:text="关于"
-                android:textColor="@color/textColor" />
+                android:textColor="@color/white" />
 
             <ImageView
                 android:id="@+id/about_title_extraicon"
