--- a/app/src/main/res/layout/activity_favorvideo.xml
+++ b/app/src/main/res/layout/activity_favorvideo.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:text="收藏夹"
-            android:textColor="@color/textColor" />
+            android:textColor="@color/white" />
 
         <ImageView
             android:id="@+id/favv_title_extraicon"
@@ -60,7 +60,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/favv_title_layout"
-        android:background="@color/textColor"
+        android:background="@color/white"
         android:clickable="true"
         android:gravity="center"
         android:orientation="vertical"
