--- a/app/src/main/res/layout/activity_joinqq.xml
+++ b/app/src/main/res/layout/activity_joinqq.xml
@@ -24,7 +24,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:text="联系作者"
-                android:textColor="@color/textColor"
+                android:textColor="@color/white"
                 android:textSize="13sp" />
 
             <ImageView
