--- a/app/src/main/res/layout/activity_qr.xml
+++ b/app/src/main/res/layout/activity_qr.xml
@@ -25,7 +25,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:text="播放"
-                android:textColor="@color/textColor" />
+                android:textColor="@color/white" />
 
             <ImageView
                 android:id="@+id/qr_title_extraicon"
