--- a/app/src/main/res/layout/activity_supportme.xml
+++ b/app/src/main/res/layout/activity_supportme.xml
@@ -27,7 +27,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:text="支持我"
-                android:textColor="@color/textColor" />
+                android:textColor="@color/white" />
 
             <ImageView
                 android:id="@+id/sme_title_extraicon"
