--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -28,7 +28,7 @@
         android:id="@+id/sea_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/textColor"
+        android:background="@color/white"
         android:divider="@color/alpha"
         android:dividerHeight="2dp"
         android:paddingTop="34dp"
@@ -38,7 +38,7 @@
         android:id="@+id/sea_noweb"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/textColor"
+        android:background="@color/white"
         android:clickable="true"
         android:gravity="center"
         android:orientation="vertical"
@@ -58,7 +58,7 @@
         android:id="@+id/sea_searching"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/textColor"
+        android:background="@color/white"
         android:clickable="true"
         android:gravity="center"
         android:orientation="vertical"
@@ -78,7 +78,7 @@
         android:id="@+id/sea_nonthing"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/textColor"
+        android:background="@color/white"
         android:clickable="true"
         android:gravity="center"
         android:orientation="vertical"
