--- a/app/src/main/res/layout/widget_title.xml
+++ b/app/src/main/res/layout/widget_title.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:text="动态"
-        android:textColor="@color/textColor"
+        android:textColor="@color/white"
         android:textSize="12sp" />
 
     <ImageView
