--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/textColor2</item>
+        <item name="colorPrimary">@color/pink_light</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/mainColor</item>
         <item name="android:windowBackground">@color/activityBG</item>
@@ -10,7 +10,7 @@
 
     <style name="BlueTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/textColor2</item>
+        <item name="colorPrimary">@color/pink_light</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/mainColor</item>
         <item name="android:windowBackground">@color/activityBG</item>
