--- a/app/src/main/res/drawable/shape_bg_vd_videopart_def.xml
+++ b/app/src/main/res/drawable/shape_bg_vd_videopart_def.xml
@@ -4,5 +4,5 @@
     <corners android:radius="3dp" />
     <stroke
         android:width="1dp"
-        android:color="@color/shareBG" />
+        android:color="@color/gray_da" />
 </shape>
