--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:text="登录"
-                android:textColor="@color/textColor" />
+                android:textColor="@color/white" />
 
             <ImageView
                 android:id="@+id/login_title_extraicon"
@@ -48,7 +48,7 @@
             android:paddingBottom="4dp"
             android:paddingTop="4dp"
             android:text="账号密码登录 >"
-            android:textColor="@color/textColor" />
+            android:textColor="@color/white" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -148,7 +148,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="10dp"
                 android:text="登录"
-                android:textColor="@color/textColor" />
+                android:textColor="@color/white" />
         </LinearLayout>
 
 
