--- a/app/src/main/res/layout/activity_sue.xml
+++ b/app/src/main/res/layout/activity_sue.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:text="炫耀一下"
-            android:textColor="@color/textColor"
+            android:textColor="@color/white"
             android:textSize="13sp" />
 
         <ImageView
@@ -59,7 +59,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:background="@color/shareBG"
+                android:background="@color/gray_da"
                 android:paddingBottom="10dp"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
@@ -86,7 +86,7 @@
                 android:layout_marginRight="30dp"
                 android:onClick="clickSend"
                 android:text="发送"
-                android:textColor="@color/textColor" />
+                android:textColor="@color/white" />
         </LinearLayout>
     </ScrollView>
 
