--- a/app/src/main/res/layout/activity_tail.xml
+++ b/app/src/main/res/layout/activity_tail.xml
@@ -19,7 +19,7 @@
             android:layout_centerHorizontal="true"
             android:gravity="center_vertical"
             android:text="小尾巴设置"
-            android:textColor="@color/textColor"
+            android:textColor="@color/white"
             android:textSize="12sp" />
 
         <ImageView
@@ -65,7 +65,7 @@
                 android:paddingLeft="22dp"
                 android:paddingRight="22dp"
                 android:paddingTop="4dp"
-                android:background="@color/shareBG">
+                android:background="@color/gray_da">
 
                 <TextView
                     android:id="@+id/tail_pretext"
