--- a/app/src/main/res/layout/item_aniremind.xml
+++ b/app/src/main/res/layout/item_aniremind.xml
@@ -40,7 +40,7 @@
         android:background="@drawable/shape_anre_followbg"
         android:padding="2dp"
         android:text="已追番"
-        android:textColor="@color/textColor"
+        android:textColor="@color/white"
         android:textSize="10sp" />
 
     <TextView
