--- a/app/src/main/res/layout/item_dl_dling.xml
+++ b/app/src/main/res/layout/item_dl_dling.xml
@@ -34,7 +34,7 @@
             android:layout_alignParentTop="true"
             android:ellipsize="end"
             android:maxLines="2"
-            android:textColor="@color/textColor3"
+            android:textColor="@color/gray_44"
             android:textSize="13sp" />
 
         <LinearLayout
@@ -48,7 +48,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textColor="@color/textColor3"
+                android:textColor="@color/gray_44"
                 android:textSize="9sp" />
 
             <TextView
@@ -57,7 +57,7 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:gravity="right"
-                android:textColor="@color/textColor3"
+                android:textColor="@color/gray_44"
                 android:textSize="9sp" />
 
         </LinearLayout>
@@ -72,7 +72,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textColor="@color/textColor3"
+                android:textColor="@color/gray_44"
                 android:textSize="9sp" />
 
             <TextView
@@ -81,7 +81,7 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:gravity="right"
-                android:textColor="@color/textColor3"
+                android:textColor="@color/gray_44"
                 android:textSize="9sp" />
 
         </LinearLayout>
