--- a/app/src/main/res/layout/item_news_unknowtype.xml
+++ b/app/src/main/res/layout/item_news_unknowtype.xml
@@ -53,7 +53,7 @@
             android:layout_height="match_parent"
             android:layout_below="@+id/liuk_head"
             android:layout_marginTop="5dp"
-            android:background="@color/shareBG"
+            android:background="@color/gray_da"
             android:padding="10dp">
 
             <ImageView
