--- a/app/src/main/res/layout/viewpager_ou_userinfo.xml
+++ b/app/src/main/res/layout/viewpager_ou_userinfo.xml
@@ -36,7 +36,7 @@
                 android:paddingRight="6dp"
                 android:paddingTop="4dp"
                 android:text="+关注"
-                android:textColor="@color/textColor"
+                android:textColor="@color/white"
                 android:textSize="13sp" />
 
             <TextView
@@ -64,7 +64,7 @@
                 android:paddingLeft="4dp"
                 android:paddingRight="4dp"
                 android:paddingTop="1dp"
-                android:textColor="@color/textColor3"
+                android:textColor="@color/gray_44"
                 android:textSize="9sp"
                 android:textStyle="bold" />
 
@@ -75,7 +75,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/ou_lv"
                 android:layout_marginTop="2dp"
-                android:textColor="@color/textColor3"
+                android:textColor="@color/gray_44"
                 android:textSize="12sp"
                 android:visibility="gone" />
 
@@ -99,7 +99,7 @@
                 android:paddingLeft="6dp"
                 android:paddingRight="6dp"
                 android:paddingTop="4dp"
-                android:textColor="@color/textColor"
+                android:textColor="@color/white"
                 android:textSize="12sp" />
 
             <TextView
@@ -115,7 +115,7 @@
                 android:paddingLeft="6dp"
                 android:paddingRight="6dp"
                 android:paddingTop="4dp"
-                android:textColor="@color/textColor"
+                android:textColor="@color/white"
                 android:textSize="12sp" />
 
             <TextView
@@ -129,7 +129,7 @@
                 android:paddingLeft="6dp"
                 android:paddingRight="6dp"
                 android:paddingTop="4dp"
-                android:textColor="@color/textColor"
+                android:textColor="@color/white"
                 android:textSize="12sp" />
 
         </RelativeLayout>
