--- a/app/src/main/res/layout/viewpager_vd_recommend.xml
+++ b/app/src/main/res/layout/viewpager_vd_recommend.xml
@@ -15,7 +15,7 @@
         android:id="@+id/vd_recommend_nothing"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/textColor"
+        android:background="@color/white"
         android:gravity="center"
         android:orientation="vertical"
         android:paddingBottom="33dp"
