--- a/app/src/main/res/layout/viewpager_vd_vd.xml
+++ b/app/src/main/res/layout/viewpager_vd_vd.xml
@@ -24,7 +24,7 @@
                 android:layout_marginLeft="22dp"
                 android:layout_marginRight="22dp"
                 android:layout_marginTop="8dp"
-                android:textColor="@color/textColor3" />
+                android:textColor="@color/gray_44" />
 
             <TextView
                 android:id="@+id/vd_video_play"
@@ -78,7 +78,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:textColor="@color/textColor3"
+                        android:textColor="@color/gray_44"
                         android:textSize="14sp" />
 
                     <TextView
@@ -453,7 +453,7 @@
                         android:layout_toRightOf="@+id/vd_card_head"
                         android:ellipsize="end"
                         android:maxLines="1"
-                        android:textColor="@color/textColor3"
+                        android:textColor="@color/gray_44"
                         android:textSize="13sp"
                         android:textStyle="bold" />
 
@@ -467,7 +467,7 @@
                         android:layout_toRightOf="@+id/vd_card_head"
                         android:ellipsize="end"
                         android:maxLines="1"
-                        android:textColor="@color/textColor3"
+                        android:textColor="@color/gray_44"
                         android:textSize="10sp" />
                 </RelativeLayout>
             </android.support.v7.widget.CardView>
@@ -496,6 +496,6 @@
             android:layout_height="wrap_content"
             android:paddingTop="4dp"
             android:text="  加载中..."
-            android:textColor="@color/textColor" />
+            android:textColor="@color/white" />
     </LinearLayout>
 </RelativeLayout>
